# transactions-assessment

./: Dockerfile  Makefile  README.md  docker-compose.yml  local.env  pyproject.toml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py
make/: app.mk
src/authentication/: urls.py
src/authentication/views/: login_view.py  logout_view.py
src/transactions/: admin.py  serializers.py  urls.py
src/transactions/management/commands/: populate_test_db.py  simulate_race_requests.py
src/transactions/migrations/: 0001_initial.py
src/transactions/models/: __init__.py  account.py  mixins.py  transaction.py
src/transactions/tests/integration/: test_create_deposit.py  test_create_withdraw.py  test_get_balance.py
src/transactions/views/: balance_view.py  deposit_view.py  withdraw_view.py
