[tool.poetry]
name = "transactions-assessment"
version = "0.1.0"
description = "A take-home Django API project for a position"
authors = ["Tomas Ruiz Sanchez <truizsanchez@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.15"
psycopg = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
